2007-04-09  Raja R Harinath  <rharinath@novell.com>

	A better fix
	* flowanalysis.cs (UsageVector.MergeChild): Handle child.Block == null.
	* statement.cs: Use KillFlowBranching only in ResolveUnreachable.

	Fix #81338
	* statement.cs (For.Resolve): If resolution fails, use
	KillFlowBranching.

2007-04-08  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs (MakeName): Make faster and zero-based.
	(VerifyExplicitParameterCompatibility): Back to mode where generic
	parameter is ignored.
	(AnonymousMethodMethod.Emit): Decorate method as compiler generated.

	* class.cs (EmitType): Method can emit another new method.

	* cs-tokenizer.cs (IsLinqEnabled): Fixes static cctor race.

	* driver.cs: Updated.

	* lambda.cs: Reuse predefined empty parameters.

	* parameter.cs: Updated

	* support.cs: Implemented InflateTypes.

	* typemanager.cs (GetFullName): Don't use FullName as it can be null.
	(InitSystemCore): Introduced to isolate 3.0 dependencies.

2007-04-03  Martin Baulig  <martin@ximian.com>

	Fix #80632.

	* statement.cs (Foreach.CollectionForeach.TryType): Use a custom
	version of TypeManager.IsOverride() which also works with generic
	types.	

2007-04-03  Martin Baulig  <martin@ximian.com>

	Fix #81044.

	* convert.cs
	(Convert.ExplicitReferenceConversion): We need to cast when
	converting from IList<T> to S[].

2007-04-01  Marek Safar  <marek.safar@gmail.com>

	* decl.cs (FindExtensionMethods): Consider all candidates with same name
	at this level.
	
	* expression.cs (MemberAccess.DoResolve): Cache resolved expression.

2007-03-31  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs (AnonymousMethodExpression.Compatible): Handles both
	argument and return type inferring.

	* codegen.cs (InferReturnType): Flag whether return can be inferred.
	(ReturnType): Turned to property.

	* statement.cs (Return): Implemented return type inferring.

	* support.cs (ReflectionParameters): Use local types if possible.

2007-03-30  Raja R Harinath  <rharinath@novell.com>
