@@ -1,3 +1,7 @@
+2007-04-10  Martin Baulig  <martin@ximian.com>
+
+	* expression.cs (New.DoEmitTypeParameter): Fix #81109.
+
 2007-04-09  Raja R Harinath  <rharinath@novell.com>
 
 	A better fix
